force-app/main/default/objects/SAPRequestQueue__c/SAPRequestQueue__c.object-meta.xml
<CustomObject>
    <description>Objets to queue the requests to update objects in SAP</description>
    <label>SAP Request Queue</label>
    <nameField>
        <label>SAP Requests Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Requests Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>