force-app/main/default/objects/SAPRequestQueue__c/fields/ActionRequested__c.field-meta.xml
<CustomField>
    <fullName>ActionRequested__c</fullName>
    <description>Action requested from SAP</description>
    <label>Action Requested</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CREATE</fullName>
            </value>
            <value>
                <fullName>READ</fullName>
            </value>
            <value>
                <fullName>UPDATE</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>