force-app/main/default/objects/SAPRequestQueue__c/fields/AllowDuplicates__c.field-meta.xml
<CustomField>
    <fullName>AllowDuplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows same object to be sent severla times</description>
    <label>Duplicates Allowed</label>
    <type>Checkbox</type>
</CustomField>