force-app/main/default/objects/SAPRequestQueue__c/fields/BodyRequest__c.field-meta.xml
<CustomField>
    <fullName>BodyRequest__c</fullName>
    <description>Body of the request (JSON mostly)</description>
    <label>Body Request</label>
    <length>70000</length>
    <type>LongTextArea</type>
</CustomField>