force-app/main/default/objects/SAPRequestQueue__c/fields/ClassificationKey1__c.field-meta.xml
<CustomField>
    <fullName>ClassificationKey1__c</fullName>
    <formula>SAPEndpoint__c &amp; &quot;-&quot; &amp;  TEXT(CreatedBy.CountryCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Key 1</label>
    <type>Text</type>
</CustomField>