force-app/main/default/objects/SAPRequestQueue__c/fields/IsMultiple__c.field-meta.xml
<CustomField>
    <fullName>IsMultiple__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the service accepts lists of records</description>
    <label>Is Multiple</label>
    <type>Checkbox</type>
</CustomField>