force-app/main/default/objects/SAPRequestQueue__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message related to the result of the last connection to the requested service</description>
    <label>Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>