force-app/main/default/objects/SAPRequestQueue__c/fields/Parameter__c.field-meta.xml
<CustomField>
    <fullName>Parameter__c</fullName>
    <inlineHelpText>Optional extra information for teh API Handler</inlineHelpText>
    <label>Parameter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>