force-app/main/default/objects/SAPRequestQueue__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Body of the request (JSON mostly)</description>
    <label>Payload</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>