force-app/main/default/objects/SAPRequestQueue__c/fields/RequesterID__c.field-meta.xml
<CustomField>
    <fullName>RequesterID__c</fullName>
    <description>ID of the object requesting the service. It might be used when porcessing the repsonse to update some fields.</description>
    <label>Requester ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>