force-app/main/default/objects/SAPRequestQueue__c/fields/ResponseCode__c.field-meta.xml
<CustomField>
    <fullName>ResponseCode__c</fullName>
    <description>Response code received</description>
    <label>Response Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>