force-app/main/default/objects/SAPRequestQueue__c/fields/SAPAPIHandler__c.field-meta.xml
<CustomField>
    <fullName>SAPAPIHandler__c</fullName>
    <description>Name of the class that will handle the connection to the SAP service</description>
    <label>SAP API Handler</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>