force-app/main/default/objects/SAPRequestQueue__c/fields/SAPEndpoint__c.field-meta.xml
<CustomField>
    <fullName>SAPEndpoint__c</fullName>
    <description>Name of the requested SAP endpoint</description>
    <label>SAP Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>