force-app/main/default/objects/SAPRequestQueue__c/fields/SAPKey__c.field-meta.xml
<CustomField>
    <fullName>SAPKey__c</fullName>
    <description>SAP Key of the object created (if applicable). For example, the order number, the customer number, etc.</description>
    <label>SAP Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>