force-app/main/default/objects/SAPRequestQueue__c/fields/Skipped__c.field-meta.xml
<CustomField>
    <fullName>Skipped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NO se ha gestionado la petición proqeu el handler ha decidido que no se puede lanzar</description>
    <label>Skipped</label>
    <type>Checkbox</type>
</CustomField>