force-app/main/default/objects/SAPRequestQueue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;QUEUED&quot;</defaultValue>
    <description>Status of the request</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUEUED</fullName>
            </value>
            <value>
                <fullName>PROCESSED</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>EXCEPTION</fullName>
            </value>
            <value>
                <fullName>BLOCKED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>