force-app/main/default/objects/SAPRequestQueue__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>Key generated in the trigger (SAPRequestsDomain.cls) to prevent duplicated CREATE operations</description>
    <label>Unique Key</label>
    <length>44</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>